--- a/src/static/scss/components/_input-filter.scss
+++ b/src/static/scss/components/_input-filter.scss
@@ -3,24 +3,10 @@
   flex: 1;
   flex-direction: column;
 
-  margin-top: 1rem;
-
-  label {
-    font-size: $font-size-centi;
-    font-weight: 500;
-
-    margin-bottom: .5rem;
-
-    opacity: .6;
-  }
-
   & > .input {
-    position: relative;
+    @extend .input-text;
 
-    display: flex;
-    align-items: center;
-
-    height: 100%;
+    margin-bottom: -.5rem;
 
     & > input {
       padding-right: 5rem;
@@ -60,7 +46,7 @@
     display: flex;
     align-items: center;
 
-    margin-top: .5rem;
+    padding-top: .5rem;
   }
 
   & > .filters > .title {
