--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -19,7 +19,7 @@
     <h2>Criar Grupo Fechado</h2>
     <div class="close-icon"></div>
   </header>
-  <form class="document-form" method="POST">
+  <form method="POST">
     {% csrf_token %}
     {{form.non_field_errors}}
     <div class="input-group">
@@ -37,9 +37,9 @@
     <h2>Gerenciar Perfis do Grupo</h2>
 
     <div class="input-filter js-openParticipation">
-      <label for="name">Buscar perfis por nome ou email: </label>
       <div class="input">
         <input id="name" class="js-search-name">
+        <label for="name">Buscar perfis por nome ou email: </label>
         <div class="filter js-searchFilter">Filtros</div>
       </div>
       <div class="filters">
