add function to clear filters

--- a/src/static/scss/components/_theme-autocomplete.scss
+++ b/src/static/scss/components/_theme-autocomplete.scss
@@ -33,8 +33,8 @@
   }
 
   & > ul {
-    position: absolute;
+    position: absolute !important;
     z-index: 2;
-    top: .5rem;
+    top: .5rem !important;
   }
 }
