--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -45,6 +45,7 @@
       <div class="filters">
         <span class="title _hidden js-title">Filtros adicionados:</span>
         <ul class="tags js-tags"></ul>
+        <div class="filter js-clearFilters">Limpar</div>
       </div>
     </div>
 
