Updated opinions structure

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -28,6 +28,7 @@
 @import 'components/solid-button';
 @import 'components/text-highlight';
 @import 'components/app-modal';
+@import 'components/opinion-card';
 @import 'components/simple-link';
 @import 'components/text-off';
 @import 'components/info-text';
