--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -7,6 +7,7 @@
 
 <main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}">
   <div class="wrapper">
+    <div class="invisible"></div>
     <aside class="sidebar">
       <div class="item">
         <span class="title">Autor</span>
