Fix missing class selector

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -63,11 +63,11 @@
     @include hidden-shadow;
   }
 
-  & > header.-shadow {
+  & > .header.-shadow {
     @include header-shadow;
   }
 
-  & > header > .close-icon {
+  & > .header > .close-icon {
     position: absolute;
     right: 1.6rem;
 
