--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -80,8 +80,10 @@
 {% include "components/suggestion-input.html" %}
 
 {% include "components/opinion-modal.html" with suggestions=suggestions %}
+
 {% include "components/info-modal.html" %}
 
+{% include "components/opinion-onboarding.html" %}
 {% endblock content %}
 
 {% block page_js %}
