--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -103,5 +103,6 @@
   <script src="{% static 'js/components/opinionModal/controller.js' %}"></script>
   <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
   <script src="{% static 'js/components/highlightTooltip/view.js' %}"></script>
+  <script src="{% static 'js/components/opinionOnboarding/view.js' %}"></script>
   <script src="{% static 'js/pages/document.js' %}"></script>
 {% endblock page_js %}
