Add delayed animation to button

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -180,6 +180,11 @@
 
     margin-top: 2rem;
     padding: .5rem 2rem;
+
+    animation: fade-in-bottom 1s 4s $swift-out forwards;
+    pointer-events: none; // Modified in fade-in-bottom animation and maintained with "forwards" value 
+
+    opacity: 0; // Modified in fade-in-bottom animation and maintained with "forwards" value
   }
 
   & > .content > .footer > .simple-link {
