--- a/src/static/scss/ambience/_animation.scss
+++ b/src/static/scss/ambience/_animation.scss
@@ -1,1 +1,16 @@
 $swift-out: cubic-bezier(.55, 0, .1, 1);
+
+@keyframes fade-in-bottom {
+  0% {
+    transform: translateY(100%);
+    pointer-events: none;
+
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    pointer-events: auto;
+
+    opacity: 1;
+  }
+}
