--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -46,3 +46,4 @@
 @import 'components/close-icon';
 @import 'components/input-filter';
 @import 'components/overlay-modal';
+@import 'components/side-bar';
