--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -16,6 +16,11 @@
     margin-right: auto;
     margin-left: 3rem;
     padding-right: 3rem;
+
+    @include bp-smallonly {
+      margin-left: 0;
+      padding-right: 0;
+    }
   }
 
   & > article > header {
@@ -72,6 +77,12 @@
     width: 14rem;
     margin-left: auto;
     padding-left: 3rem;
+
+    @include bp-smallonly {
+      display: none;
+
+      padding-left: 0;
+    }
   }
 
   & > .wrapper > .invisible {
@@ -82,12 +93,12 @@
     width: calc(100vw + 100%);
     height: 100%;
 
-    &:hover + .sidebar > .item {
+    &:hover + .side-bar > .item {
       opacity: 1;
     }
   }
 
-  & > .wrapper > .sidebar {
+  & > .wrapper > .side-bar {
     position: fixed;
 
     overflow-y: auto;
@@ -97,55 +108,5 @@
     padding-right: 1.5rem;
 
     text-align: right;
-
-    color: $color-deep-gray;
-
-    &:hover > .item {
-      opacity: 1;
-    }
-
-    &::after {
-      display: block;
-
-      height: 1rem;
-
-      content: '';
-    }
-
-    & > * + * {
-      margin-top: 1.5rem;
-    }
-
-    & > .item {
-      display: flex;
-      flex-direction: column;
-
-      opacity: .5;
-    }
-
-    & > .item > .title {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    & > .item > span {
-      font-size: .875rem;
-      font-weight: normal;
-
-      margin-top: .5rem;
-    }
-
-    & > .item > .themes {
-      display: flex;
-      justify-content: flex-end;
-
-      & > * + * {
-        margin-left: .75rem;
-      }
-    }
-
-    & > .item > .themes > .theme-tag {
-      cursor: text;
-    }
   }
 }
