--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -8,7 +8,7 @@
 <main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}" data-group-id="{{ object.id }}">
   <div class="wrapper">
     <div class="invisible"></div>
-    <aside class="sidebar">
+    <aside class="side-bar">
       {% if object.document.infos.authors.all %}
       <div class="item">
         <span class="title">Autor</span>
@@ -77,6 +77,7 @@
 {% include "components/suggestion-input.html" %}
 
 {% include "components/opinion-modal.html" with suggestions=suggestions %}
+{% include "components/info-modal.html" %}
 
 {% endblock content %}
 
