Create info button

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -47,3 +47,4 @@
 @import 'components/input-filter';
 @import 'components/overlay-modal';
 @import 'components/side-bar';
+@import 'components/info-button';
