--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
 
-<main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}">
+<main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}" data-group-id="{{ object.id }}">
   <div class="wrapper">
     <div class="invisible"></div>
     <aside class="sidebar">
