--- a/src/templates/components/filter-modal.html
+++ b/src/templates/components/filter-modal.html
@@ -5,7 +5,7 @@
 
 {% block extra_attributes %}data-current-user="{{ request.user.id }}"{% endblock %}
 
-{% block title %}Filtros{% endblock %}
+{% block title_modal %}Filtros{% endblock %}
 
 {% block content %}
   <form class="js-filterModalForm">
