--- a/src/templates/structure/app-modal.html
+++ b/src/templates/structure/app-modal.html
@@ -3,7 +3,7 @@
 <div class="app-modal {% block extra_classes %}{% endblock %}" {% block extra_attributes %}{% endblock %}>
   {% block header %}
     <div class="header js-headerModal">
-      <h2>{% block title %}{% endblock%}</h2>
+      <h2>{% block title_modal %}{% endblock%}</h2>
       {% block close_button %}
         <div class="close js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
       {% endblock close_button %}
