Add textHighlight js component

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -48,3 +48,6 @@
 @import 'components/overlay-modal';
 @import 'components/info-bar';
 @import 'components/info-button';
+
+// Vendor
+@import 'vendor/tooltip';
