--- a/src/static/scss/components/_text-highlight.scss
+++ b/src/static/scss/components/_text-highlight.scss
@@ -1,4 +1,9 @@
 .text-highlight {
   background-color: rgba(255, 221, 102, 0.5);
   color: $color-deep-gray;
+
+  &.-active {
+    background-color: rgba(255, 221, 102, 1);
+    cursor: default;
+  }
 }
