Fix improve/opinion-modal #56
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/document-excerpt.html
+++ b/src/templates/components/document-excerpt.html
@@ -1,2 +1,2 @@
 {% load participations_tags %}
-<span class="document-excerpt js-documentExcerpt" data-id="{{excerpt.id}}">{% highlight_excerpt excerpt request.user %}</span>
+<span class="document-excerpt js-documentExcerpt" data-id="{{excerpt.id}}">{% highlight_excerpt excerpt group request.user %}</span>
